# curso_de_flask

./: pyproject.toml
aula_01/: app.py
aula_02/: app.py
aula_03/: app.py
aula_04/: app.py
aula_04/site/: index.html
aula_06/: app.py
aula_06/site/: index.html
crud_flask/: app.py
tests/: test_curso_de_flask.py
