[tool.poetry]
name = "curso_de_flask"
version = "0.1.0"
description = ""
authors = ["Cosmo Rodrigues <cosmo.rsilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
